Рефакторинг pom файлов